# clustering_arena

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/: caveman.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: streamlit_app.py
notebooks/: 01_data_exploration.ipynb  02_algorithm_comparison.ipynb  03_deep_dive_density.ipynb  04_deep_dive_hierarchical.ipynb  05_choosing_the_right_algorithm.ipynb
outputs/: results.csv  umap_digits.pkl  umap_penguins.pkl  umap_wine.pkl
src/: __init__.py  algorithms.py  datasets.py  diagnostics.py  metrics.py  visualisation.py
tests/: test_algorithms.py  test_datasets.py  test_diagnostics.py  test_metrics.py  test_visualisation.py
